<resources>
    <string name="server_url_user">http://voltaire.se.uni-hannover.de:8000</string>
        <string name="api_register">%1$s/api/user/register</string>
        <string name="api_login">%1$s/api/user/login</string>
        <string name="api_logout">%1$s/api/user/logout</string>
        <string name="api_change_password">%1$s/api/user/change_password</string>
        <string name="api_get_user">%1$s/api/user/user</string>
        <string name="api_get_paypal">%1$s/api/user/get_paypalme</string>
        <string name="api_delete_paypal">%1$s/api/user/delete_paypalme</string>
        <string name="api_change_paypal">%1$s/api/user/change_paypalme</string>
        <string name="api_set_profile_picture">%1$s/api/user/set_profile_picture</string>
        <string name="api_get_profile_picture">%1$s/api/user/get_profile_picture</string>
        <string name="api_change_username">%1$s/api/user/change_username</string>
        <string name="api_get_all">%1$s/api/user/get_all_events</string>
        <string name="api_create_event">%1$s/api/user/create_event</string>
        <string name="api_remove_user_from_event">%1$s/api/user/remove_user_from_event</string>
        <string name="api_change_event">%1$s/api/user/change_event</string>
        <string name="api_delete_event">%1$s/api/user/delete_event</string>
        <string name="api_add_user_to_event">%1$s/api/user/add_user_to_event</string>
        <string name="api_create_post">%1$s/api/user/create_post</string>
        <string name="api_change_post">%1$s/api/user/change_post</string>
        <string name="api_delete_post">%1$s/api/user/delete_post</string>
        <string name="api_add_user_to_post">%1$s/api/user/add_user_to_post</string>
        <string name="post_has_been_created">Post wurde erstellt!</string>
        <string name="post_has_been_changed">Post wurde geändert!</string>
        <string name="post_has_been_deleted">Post wurde gelöscht!</string>
        <string name="title_required">Titel ist erforderlich*</string>
        <string name="price_required">Wert ist erforderlich*</string>
        <string name="no_description">Keine Beschreibung</string>
        <string name="price_in_euro">Wert in Euro</string>
        <string name="description">Beschreibung</string>
        <string name="post_date">Datum</string>
        <string name="post_title">Post titel</string>
        <string name="post_event_participant">Event Teilnehmer</string>
        <string name="post_participant">Post Teilnehmer</string>
        <string name="post_create">POST ERSTELLEN</string>
        <string name="post_save">Speichern</string>
        <string name="post_delete">Post Löschen</string>
        <string name="post_cancel">Abbrechen</string>
        <string name="post_price">Wert</string>
        <string name="chosen_participant">gewählte Teilnehmer</string>
        <string name="add_participant">Teilnehmer hinfügen</string>
        <string name="post_share_with_all">Zwischen allen Teilnehmenden aufteilen</string>
        <string name="post_sahre_with_specific">Zwischen spezifischen Teilnehmenden aufteilen</string>
        <string name="api_get_all_pay">%1$s/api/user/get_all_payments</string>
        <string name="api_create_payment">%1s/api/user/create_payment</string>
        <string name="Currency">€</string>
        <string name="api_get_news">%1$s/api/user/get_user_news</string>
        <string name="api_delete_news">%1$s/api/user/delete_news</string>
    <string name="app_name">Money Split</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Analyse</string>
    <string name="title_notifications">Neuigkeiten</string>
    <string name="title_activity_login">Anmelden</string>
    <string name="title_activity_sign_up">Konto erstellen</string>
    <string name="prompt_email">Nutzername</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Einloggen</string>
    <string name="action_sign_in_short">Einloggen</string>
    <string name="welcome">Willkommen!</string>
    <string name="timeout">Login timeout</string>
    <string name="invalid_username">Kein gültiger Benutzername</string>
    <string name="invalid_password">Das Passwort muss mindestens 8 Zeichen lang sein</string>
    <string name="login_failed">"Einloggen fehlgeschlagen"</string>
    <string name="invalid_email">"E-Mail ist ungültig"</string>
    <string name="required">Erforderlich*</string>
    <string name="email_required">Email ist erforderlich*</string>
    <string name="password_required">Passwort ist erforderlich*</string>
    <string name="keepLogin">Angemeldet Bleiben?</string>
    <string name="register_success">Erfolgreich registriert!</string>
    <string name="register_failure">E-Mail ist bereits registriert. Bitte verwenden Sie eine andere E-Mail!</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="search_hint">Veranstaltung suchen</string>
    <string name="placeholder_veranstaltung_name">Veranstaltung#1</string>
    <string name="event_activity">Aktivität</string>
    <string name="event_participants">Teilnehmer</string>
    <string name="add_entry">add new entry</string>
    <string-array name="entries_example">
        <item>Posten6</item>
        <item>Posten5</item>
        <item>Posten4</item>
        <item>Posten3</item>
        <item>Posten2</item>
        <item>Posten1</item>
    </string-array>
    <string name="test">Teilnehmer</string>
    <string name="username">Nutzername</string>
    <string name="email">E-Mail Adresse</string>
    <string name="guest">Gast</string>
    <string name="single_shared">Ein geteilter Posten</string>
    <string name="no_shared">Keine geteilten Posten></string>
    <string name="x_shared">geteilte Posten</string>
    <string name="self_name">Du</string>
    <string name="no_participant">Keine Teilnehmer</string>
    <string name="single_participant">Ein Teilnehmer</string>
    <string name="x_participant">Teilnehmer</string>
    <string name="placeholder_notification_header">Header</string>
    <string name="placeholder_notification_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</string>
    <string name="placeholder_notification_button">ablehnen</string>
    <string name="join_title">Beitreten?</string>
    <string name="join_text">Willst du in der Veranstaltung bleiben?</string>
    <string name="join_positive">Bleiben</string>
    <string name="join_negative">Verlassen</string>
    <string name="plus">Einahmen in</string>
    <string name="minus">Ausgaben in</string>
    <string-array name="filter">
        <item>Alle</item>
        <item>Nur offene Veranstaltungen</item>
        <item>Nur überfällige Veranstaltungen</item>
        <item>Nur erledigte Veranstaltungen</item>
        <item>Nur archivierte Veranstaltungen</item>
        <item>Letzte 7 Tage</item>
        <item>Letzte 30 Tage</item>
    </string-array>
    <string name="chgUsername">Nutzernamen ändern</string>
    <string name="chgPassword">Passwort ändern</string>
    <string name="chgPicture">Profilbild ändern</string>
    <string name="logout">Ausloggen</string>
    <string name="logout_success">Erfolgreich ausgeloggt!</string>
    <string name="logout_failure">Fehler beim Ausloggen</string>
    <string name="deleteAccount">Konto löschen</string>
    <string name="chgPayPal">Paypal Link ändern</string>
    <string name="impressum">Impressum</string>
    <string name="title_activity_sign_in_or_sign_up_guest">SignInOrSignUpGuestActivity</string>
    <string name="settings">Einstellungen</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username_guest">Als Gast eingeloggt</string>
    <string name="new_username">Neuer Nutzername</string>
    <string name="repeat_password">Passwort wiederholen!</string>
    <string name="identical_passwords">Das Passwort muss identisch sein!</string>
    <string name="chgPassword_success">Passwort wurde erfolgreich geändert!</string>
    <string name="chgPassword_failure">Das aktuelle Passwort ist falsch eingegeben!</string>
    <string name="current_link">Aktueller Link: </string>
    <string name="chgPaypal_failure">Bitte gültigen Link eingeben!</string>
    <string name="username_required">Nutzername ist erforderlich*</string>
    <string name="username_length">Nutzername muss mindestens 3 zeichnen lang sein!</string>
    <string name="chgUsername_success">Nutzername wurde erfolgreich geändert!</string>
    <string name="open_galerie">Galerie öffnen</string>
    <string name="save">Speichern</string>
    <string name="newEventCreation">Neue Veranstaltung Erstellen</string>
    <string name="eventCreationNameError">Der Name muss mindestens 3 Zeichen enthalten</string>
    <string name="eventCreationDueDate">Fälligkeitsdatum</string>
    <string name="eventCreationPastDateError">Das Fälligkeitsdatum darf nicht in der Vergangenheit liegen!</string>
    <string name="archive">Archiviert</string>
    <string name="archive_question">Archivieren?</string>
    <string name="remove_archived">Archivierung aufheben?</string>
    <string name="data_fetch_error">Daten konnten nicht geladen werden!</string>
    <string name="endDate">Fälligkeitstermin:  </string>
    <string name="changeEventPic">Veranstaltungsbild ändern</string>
    <string name="addMember">Teilnehmende hinzufügen</string>
    <string name="shareLink">Mit Link einladen</string>
    <string name="eventOver">Veranstaltung auf erleditgt setzten</string>
    <string name="changeEndeDate">Fälligkeitstermin ändern</string>
    <string name="leaveEvent">Veranstaltung verlassen</string>
    <string name="deleteEvent">Veranstaltung Löschen</string>
    <string name="xx_xx_xxxx">XX.XX.XXXX</string>
    <string name="cancel">Abbrechen </string>
    <string name="noPermission">Du hast keine Rechte das zu tun</string>
    <string name="invalidDate">ungültiges Datum</string>
    <string name="oder">ODER</string>
    <string name="einladen">Einladen</string>
    <string name="eventLink">Veranstaltungslink</string>
    <string name="copy">Kopieren</string>
    <string name="todo">TODO</string>
    <string name="no">Nein</string>
    <string name="yes">ja</string>
    <string name="leave_question_1">Hast du alle ausstehenden Beträge beglichen?</string>
    <string name="m_chten_sie_die_veranstaltung_auf_erledigt_setzten">Möchtest du die Veranstaltung auf erledigt setzten?</string>
    <string name="leave_question_2">Möchtest du die Veranstaltung wirklich verlassen?</string>
    <string name="delete_event_question">Möchtest du die Veranstaltung wirklich unwiderruflich löschen?</string>
    <string name="add_member_to_event">Teilnehmende hinzufügen</string>
    <string name="History">History</string>
    <string name="PayPal">PayPal</string>
    <string name="AddPayment">Zahlung hinzufügen</string>
    <string name="ThisEvent">Diese Veranstaltung</string>
    <string name="AllEvents">Alle Veranstaltungen</string>
    <string name="Total">Gesamt:</string>
    <string name="PaymentTitle">Titel</string>
    <string name="PaymentAmount">Betrag</string>
    <string name="post_todo">TODO</string>
    <string name="post_member">Teilnehmer</string>
    <string name="post_price_example">##,## €</string>
    <string name="noPaypal">hat keinen PayPal.me link angegeben</string>
    <string name="Payment">Zahlung</string>
</resources>