<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".profile.ProfileActivity"
        android:paddingTop="?attr/actionBarSize"
        android:paddingLeft="?attr/actionBarSize"
        android:paddingRight="?attr/actionBarSize">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toTopOf="@+id/textName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintTop_toBottomOf="@id/textName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="?attr/colorOnSecondary" />

        <Button
            android:id="@+id/buttonName"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="?attr/colorSecondary"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/chgUsername"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSecondary"
            app:cornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textEmail" />

        <Button
            android:id="@+id/buttonPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/chgPicture"
            android:textAllCaps="false"
            app:cornerRadius="50dp"
            android:textColor="?attr/colorOnSecondary"
            android:backgroundTint="?attr/colorSecondary"
            app:layout_constraintTop_toBottomOf="@id/buttonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/buttonPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/chgPassword"
            android:textAllCaps="false"
            app:cornerRadius="50dp"
            android:textColor="?attr/colorOnSecondary"
            android:backgroundTint="?attr/colorSecondary"
            app:layout_constraintTop_toBottomOf="@id/buttonPicture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/buttonPaypal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/chgPayPal"
            android:textAllCaps="false"
            app:cornerRadius="50dp"
            android:textColor="?attr/colorOnSecondary"
            android:backgroundTint="?attr/colorSecondary"
            app:layout_constraintTop_toBottomOf="@id/buttonPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/logout"
            android:textAllCaps="false"
            app:cornerRadius="50dp"
            android:textColor="?attr/colorPrimary"
            android:backgroundTint="?attr/colorSecondary"
            app:layout_constraintTop_toBottomOf="@id/buttonPaypal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



        <Button
            android:id="@+id/buttonImpressum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="?attr/colorSecondary"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/impressum"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSecondary"
            app:cornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonLogout" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>