<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        tools:context=".Post.CreatePost" >

        <include layout="@layout/custom_toolbar"
            android:id="@+id/includePost"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="190dp"
            android:hint="@string/post_title"
            app:boxStrokeColor="?attr/colorAccent"
            app:endIconMode="clear_text"
            app:endIconTint="?attr/colorSecondaryVariant"
            app:helperText="@string/required"
            app:helperTextTextColor="?attr/colorPrimary"
            app:hintTextColor="?attr/colorSecondaryVariant"
            app:layout_constraintEnd_toStartOf="@+id/priceLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/includePost">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priceLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="?attr/colorAccent"
            app:endIconCheckable="false"
            app:endIconDrawable="@drawable/ic_baseline_euro_symbol_24"
            app:endIconMode="custom"
            app:endIconTint="?attr/colorSecondaryVariant"
            android:hint="@string/post_price"
            app:helperText="Erforderlich*"
            app:helperTextTextColor="?attr/colorPrimary"
            app:hintTextColor="?attr/colorSecondaryVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/titleLayout"
            app:layout_constraintTop_toBottomOf="@+id/includePost">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/priceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/postDetailsLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/description"
            app:counterEnabled="true"
            app:counterMaxLength="120"
            app:helperText="Optional*"
            app:helperTextTextColor="?attr/colorPrimary"
            app:hintTextColor="?attr/colorSecondaryVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postDetailsText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postErstellen">

            <RadioButton
                android:id="@+id/allMembers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="?attr/colorPrimary"
                android:text="@string/post_share_with_all"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/chosenMembers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="?attr/colorPrimary"
                android:text="@string/post_sahre_with_specific"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/membersText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/post_event_participant"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/membersList"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/membersList"
            android:layout_width="170dp"
            android:layout_height="180dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chosenMemebrsList"
            android:layout_width="170dp"
            android:layout_height="180dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:clickable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <Button
            android:id="@+id/cancelPost"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="221dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/post_delete"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/sharePost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/membersList" />

        <TextView
            android:id="@+id/chosenMembersText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/chosen_participant"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/chosenMemebrsList"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/sharePost"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/add_participant"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancelPost"
            app:layout_constraintTop_toBottomOf="@+id/membersList" />

        <TextView
            android:id="@+id/postID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/titleLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/postErstellen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/custom_button"
            android:text="@string/post_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/postAbbrechen"
            app:layout_constraintTop_toBottomOf="@+id/postDetailsLayout"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/postAbbrechen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_button"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/postErstellen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postDetailsLayout"
            tools:ignore="TextContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>