<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Event.LeaveEventTwo">

    <include
        android:id="@+id/include4"
        layout="@layout/custom_toolbar" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/leave_question_2"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include4" />

    <Button
        android:id="@+id/yesLeave2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="250dp"
        android:text="@string/yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/noLeave2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:text="@string/no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yesLeave2"
        android:background="@drawable/custom_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>